--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": ["bcrypt"]
   },
   "include": [
     "next-env.d.ts",
