chore: package name

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "ideo",
+  "name": "mm-auth-demo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "author": {
+    "name": "Michał Miłek"
+  },
   "scripts": {
     "build": "next build",
     "check": "next lint && tsc --noEmit",
